--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ a {
 .nav {
 
   font-weight: 700;
-  line-height: 24px;
+  line-height: 26px;
   font-size: 14px;
 }
 
@@ -92,14 +92,14 @@ a {
 .title {
   color: #000000;
   font-size: 21px;
-  line-height: 26px;
+  line-height: 21px;
   font-weight: 700;
 }
 
 .text {
   color: #333333;
   font-size: 14px;
-  line-height: 26px;
+  line-height: 21px;
   font-weight: 400;
 }
 
@@ -164,8 +164,8 @@ a {
 
 .search p {
   font-size: 14px;
-  font-weight: 400;
   line-height: 24px;
+  font-weight: 400;
   color: #333333;
 }
 
@@ -293,13 +293,19 @@ a {
   fill: #87B5D0;
 }
 
-.site-nav a:hover,
-.site-nav a:focus {
-  color: #81B3D2;
+.footer-copyright {
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 400;
 }
 
-.site-nav a:active {
-  color: #B2B2B2;
+.footer-copyright path:hover,
+.footer-copyright path:focus {
+  fill: #81B3D2;
+}
+
+.footer-copyright path:active {
+  fill: #B2B2B2;
 }
 
 /* Modal
