--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ a {
 =================== */
 
 .header {
-  width: 100%;
+  width: 1200px;
   height: 56px;
 
   position: relative;
@@ -68,6 +68,8 @@ a {
 .site-nav {
   display: flex;
   align-items: center;
+  height: 56px;
+
 }
 
 .site-nav li {
@@ -341,7 +343,7 @@ a {
   text-align: center;
   color: #FFFFFF;
 
-  display: inline-block;
+  display: block;
 }
 
 .btn-brown {
@@ -350,6 +352,7 @@ a {
   width: 568px;
   height: 86px;
   padding: 30px auto;
+  margin: 0 auto;
 }
 
 .btn-brown:hover,
@@ -365,6 +368,10 @@ a {
 
 .btn-blue {
   background-color: #81B3D2;
+
+  width: 458px;
+  height: 58px;
+  margin: 55px auto;
 }
 
 .btn-blue:hover,
@@ -378,25 +385,38 @@ a {
 }
 
 .btn-calend {
-  background-image: url("../img/calendar.svg");
+  background-image: url("../img/calendar1.svg");
   background-repeat: no-repeat;
+  background-color: transparent;
   width: 23px;
   height: 23px;
+
+  border: none;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  z-index: 1;
+
 }
 
 .btn-calend svg:hover,
 .btn-calend svg:focus {
-  fill: #000000;
+  background-image: url("../img/calendar2.svg");;
 }
 
 .btn-calend svg:active {
-  fill: #81B3D2;
+  background-image: url("../img/calendar3.svg");
 }
 
 .btn-count {
   background-color: #F2F2F2;
   color: #A9A9A9;
-  font-size: 14px;
+  font-size: 20px;
+  font-weight: 700;
+
+  width: 38px;
+  height: 38px;
+  border: none;
 }
 
 .btn-count:hover,
@@ -516,10 +536,71 @@ a {
   line-height: 26px;
 
   background-color: #FFFFFF;
+
+  width: 568px;
+  height: 395px;
+}
+
+.search-form {
+  margin: 55px;
+}
+
+.search-form input {
+  color: #000000;
+  font-weight: 700;
+  font-size: 14px;
+  text-align: center;
+}
+
+.date {
+  margin-bottom: 30px;
+
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.date input {
+  width: 346px;
+  height: 38px;
+  text-align: left;
+}
+
+.number {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
+
+.number-adults,
+.number-children {
+  width: 114px;
+
+  display: flex;
+}
+
+.number-adults {
+  margin-right: 53px;
+  margin-left: 42px;
+}
+
+.number-children {
+  margin-left: 26px;
+}
+
+.number input {
+  width: 38px;
+  height: 38px;
+  text-align: center;
 }
 
 .search-form input {
   background-color: #F2F2F2;
+  border: none;
 }
 
 .search-form input:hover,
