--- a/css/style.css
+++ b/css/style.css
@@ -806,20 +806,18 @@ fieldset {
 .filter-result {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 
-  padding-left: 72px;
-  padding-right: 72px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 72px;
 
   border-bottom: 1px solid #E5E5E5;
-
 }
 
 .filter-ressult-text {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -917,6 +915,7 @@ a.sorting-icon-current path {
 .catalog-list {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .catalog-item {
@@ -928,6 +927,7 @@ a.sorting-icon-current path {
 
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   padding-top: 30px;
   padding-bottom: 23px;
@@ -944,6 +944,7 @@ a.sorting-icon-current path {
 
 .catalog-row {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .catalog-title {
@@ -973,7 +974,7 @@ a.sorting-icon-current path {
 
   margin-top: 0;
   margin-bottom: 0;
-  padding-bottom: 10px;
+  padding-bottom: 9px;
   padding-top: 6px;
 }
 
