--- a/css/style.css
+++ b/css/style.css
@@ -71,16 +71,19 @@ a {
 .site-nav {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
 .site-nav li {
-  flex-grow: 1;
+  width: 25%;
 }
 
-.site-nav li:nth-child(3) {
-  margin-left: auto;
+.site-nav li:nth-child(4n-1) {
+  text-align: right;
+}
+
+.site-nav li:nth-child(4n) {
+  text-align: right;
 }
 
 .logo {
